<resources>
    <string name="app_name">Polda Jatengku</string>
    <string name="islam">Islam</string>
    <string name="agama">Agama</string>
    <string name="nama">Nama</string>
    <string name="alamat">Alamat</string>
    <string name="kristen">Kristen</string>
    <string name="budha">Budha</string>
    <string name="lainnya">Lainnya</string>
    <string name="nik">NIK</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="tempat_taggal_lahir">Tempat / Taggal Lahir</string>
    <string name="simpan">Simpan</string>
    <string name="e_lapor">E-Lapor</string>
    <string name="skck">SKCK</string>
    <string name="e_sim">E-SIM</string>
    <string name="lapor_keramaian">Lapor Keramaian</string>
    <string name="profil">Profil</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="logout">Logout</string>
    <string name="change_profile">Change Profile</string>
    <string name="your_name">Your Name</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="your_email_address">Your Email Address</string>
    <string name="phone">Phone</string>
    <string name="phone_number">Phone Number</string>
    <string name="reset_password">Reset Password</string>
    <string name="save">Save</string>
    <string name="hari_tanggal">Hari/Tanggal</string>
    <string name="pukul">Pukul</string>
    <string name="akibat_yang_ditimbulkan">Akibat Yang Ditimbulkan</string>
    <string name="telah_terjadi">Telah Terjadi</string>
    <string name="kirim">Kirim</string>
    <string name="password">password</string>
    <string name="belum_memiliki_akun">Belum memiliki akun?</string>
    <string name="daftar">Daftar</string>
    <string name="lupa_password">Lupa Password ?</string>
    <string name="registrasi">Registrasi</string>
    <string name="sudah_melakukan_registrasi_login_disini">Sudah melakukan registrasi ? Login disini</string>
    <string name="kebangsaan">Kebangsaan</string>
    <string name="kelamin">Kelamin</string>
    <string name="no_telp_hp">No Telp./Hp</string>
    <string name="pekerjaan">Pekerjaan</string>
    <string name="jabatan">Jabatan</string>
    <string name="akan_menyelenggarakan_kegiatan_pada">Akan Menyelenggarakan kegiatan pada :</string>
    <string name="waktu">Waktu</string>
    <string name="tempat">Tempat</string>
    <string name="acara">Acara</string>
</resources>