<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LapkerActivity2">

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="729dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/oldBrown">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:scaleType="center"
                android:src="@drawable/laporan_keramaian"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/nama"
                android:layout_marginTop="20pt"
                android:layout_marginLeft="20pt"
                android:textColor="@color/white"
                android:layout_marginBottom="5pt"/>
            <EditText
                android:layout_width="match_parent"
                android:id="@+id/namalapker"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20pt"
                android:layout_marginRight="20pt"

                android:background="@drawable/btnnt"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tempat_taggal_lahir"
                android:layout_marginBottom="5pt"
                android:layout_marginTop="20pt"
                android:layout_marginLeft="20pt"
                android:textColor="@color/white"/>
            <EditText
                android:id="@+id/ttllapker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20pt"
                android:layout_marginRight="20pt"
                android:background="@drawable/btnnt"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/pekerjaan"
                android:layout_marginTop="20pt"
                android:layout_marginLeft="20pt"
                android:layout_marginBottom="5pt"
                android:textColor="@color/white"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20pt"
                android:layout_marginRight="20pt"
                android:id="@+id/pekerlapker"
                android:background="@drawable/btnnt"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginLeft="20pt"
                android:layout_marginTop="20pt"
                android:layout_marginBottom="5pt"
                android:text="@string/alamat"
                android:textColor="@color/white"/>
            <EditText
                android:id="@+id/almlapker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20pt"
                android:layout_marginRight="20pt"
                android:background="@drawable/btnnt"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/jabatan"
                android:layout_marginTop="20pt"
                android:layout_marginLeft="20pt"
                android:layout_marginBottom="5pt"
                android:textColor="@color/white"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20pt"
                android:layout_marginRight="20pt"
                android:id="@+id/jablapker"
                android:background="@drawable/btnnt"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/akan_menyelenggarakan_kegiatan_pada"
                android:layout_marginTop="20pt"
                android:layout_marginLeft="20pt"
                android:textSize="18dp"
                android:layout_marginBottom="5pt"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/hari_tanggal"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20pt"
                android:layout_marginBottom="5pt"
                android:textColor="@color/white"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20pt"
                android:layout_marginRight="20pt"
                android:id="@+id/harilapker"
                android:background="@drawable/btnnt"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/waktu"
                android:layout_marginTop="20pt"
                android:layout_marginLeft="20pt"
                android:layout_marginBottom="5pt"
                android:textColor="@color/white"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20pt"
                android:layout_marginRight="20pt"
                android:id="@+id/wktlapker"
                android:background="@drawable/btnnt"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tempat"
                android:layout_marginTop="20pt"
                android:layout_marginLeft="20pt"
                android:layout_marginBottom="5pt"
                android:textColor="@color/white"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20pt"
                android:layout_marginRight="20pt"
                android:id="@+id/tmplapker"
                android:background="@drawable/btnnt"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/acara"
                android:layout_marginTop="20pt"
                android:layout_marginLeft="20pt"
                android:layout_marginBottom="5pt"
                android:textColor="@color/white"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20pt"
                android:layout_marginRight="20pt"
                android:id="@+id/acrlapker"
                android:background="@drawable/btnnt"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginTop="20pt"
                android:layout_marginEnd="20pt"
                android:layout_marginBottom="20pt"
                android:id="@+id/btnlapker"
                android:text="@string/simpan"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>