<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".SkckActivity">

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="729dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/oldBrown">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:scaleType="center"
                android:src="@drawable/skck_logo"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/nama"
                android:layout_marginTop="20pt"
                android:layout_marginLeft="20pt"
                android:textColor="@color/white"
                android:layout_marginBottom="5pt"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20pt"
                android:layout_marginRight="20pt"
                android:id="@+id/namaskck"
                android:background="@drawable/btnnt"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tempat_taggal_lahir"
                android:layout_marginBottom="5pt"
                android:layout_marginTop="20pt"
                android:layout_marginLeft="20pt"
                android:textColor="@color/white"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20pt"
                android:layout_marginRight="20pt"
                android:id="@+id/ttlskck"
                android:background="@drawable/btnnt"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/agama"
                android:layout_marginTop="20pt"
                android:layout_marginLeft="20pt"
                android:layout_marginBottom="5pt"
                android:textColor="@color/white"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20pt"
                android:layout_marginRight="20pt"
                android:id="@+id/agamaskck"
                android:background="@drawable/btnnt"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginLeft="20pt"
                android:layout_marginTop="20pt"
                android:layout_marginBottom="5pt"
                android:text="@string/kebangsaan"
                android:textColor="@color/white"/>
            <EditText
                android:id="@+id/kebangsaanskck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20pt"
                android:layout_marginRight="20pt"
                android:background="@drawable/btnnt"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/kelamin"
                android:layout_marginTop="20pt"
                android:layout_marginLeft="20pt"
                android:layout_marginBottom="5pt"
                android:textColor="@color/white"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20pt"
                android:layout_marginRight="20pt"
                android:id="@+id/kelaminskck"
                android:background="@drawable/btnnt"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/alamat"
                android:layout_marginTop="20pt"
                android:layout_marginLeft="20pt"
                android:layout_marginBottom="5pt"
                android:textColor="@color/white"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20pt"
                android:layout_marginRight="20pt"
                android:id="@+id/alamatskck"
                android:background="@drawable/btnn"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/nik"
                android:layout_marginTop="20pt"
                android:layout_marginLeft="20pt"
                android:layout_marginBottom="5pt"
                android:textColor="@color/white"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20pt"
                android:layout_marginRight="20pt"
                android:id="@+id/nikskck"
                android:background="@drawable/btnnt"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/no_telp_hp"
                android:layout_marginTop="20pt"
                android:layout_marginLeft="20pt"
                android:layout_marginBottom="5pt"
                android:textColor="@color/white"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20pt"
                android:layout_marginRight="20pt"
                android:id="@+id/nohpskck"
                android:background="@drawable/btnnt"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginTop="20pt"
                android:layout_marginEnd="20pt"
                android:layout_marginBottom="20pt"
                android:id="@+id/btnskck"
                android:text="@string/simpan"/>


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>