<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".esimActivity">

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="729dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/oldBrown">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:scaleType="center"
                android:src="@drawable/elaplogo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20pt"
                android:layout_marginBottom="5pt"
                android:layout_marginTop="20pt"
                android:text="@string/nama"
                android:textColor="@color/white"
                />

            <EditText
                android:id="@+id/edt_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20pt"
                android:layout_marginRight="20pt"
                android:background="@drawable/btnnt"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20pt"
                android:layout_marginBottom="5pt"
                android:layout_marginTop="20pt"
                android:text="@string/hari_tanggal"
                android:textColor="@color/white"/>

            <EditText
                android:id="@+id/edt_hrtgl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20pt"
                android:layout_marginRight="20pt"
                 android:background="@drawable/btnnt"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20pt"
                android:layout_marginBottom="5pt"
                android:layout_marginTop="20pt"
                android:text="@string/pukul"
                android:textColor="@color/white"/>

            <EditText
                android:id="@+id/edt_pukul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20pt"
                android:layout_marginRight="20pt"
                android:background="@drawable/btnnt"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginBottom="5pt"
                android:layout_marginLeft="20pt"
                android:layout_marginTop="20pt"
                android:text="@string/telah_terjadi"
                android:textColor="@color/white"/>

            <EditText
                android:id="@+id/edt_terjadi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20pt"
                android:layout_marginRight="20pt"
                android:background="@drawable/btnn"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20pt"
                android:layout_marginBottom="5pt"
                android:layout_marginTop="20pt"
                android:text="@string/akibat_yang_ditimbulkan"
                android:textColor="@color/white"/>

            <EditText
                android:id="@+id/edt_timbul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20pt"
                android:layout_marginRight="20pt"
                android:background="@drawable/btnn"/>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginTop="20pt"
                android:layout_marginEnd="20pt"
                android:layout_marginBottom="20pt"
                android:text="@string/simpan" />


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>












